MDEV-20591 Wrong Number of rows in mysqlbinlog output

calc_field_event_length should accurately calculate the size of BLOB type
fields, Instead of returning just the bytes taken by length it should return
length bytes + actual length.